--- a/static/index.html
+++ b/static/index.html
@@ -4,15 +4,23 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <title>PiControl</title>
+    <style>
+        .container {
+            margin-top: 1em;
+        }
+        .card {
+            margin-top: 1em;
+        }
+    </style>
 </head>
 <body>
-<div class="container" style="margin-top: 1em;">
+<div class="container">
     <div class="p-5 mb-4 bg-light rounded-3">
         <div class="container-fluid py-5">
             <h1 class="display-5 fw-bold">PiControl</h1>
@@ -51,12 +59,15 @@
         })
         console.log(respBody)
 
-        var xhr = new XMLHttpRequest();
-        xhr.open("POST", post_endpoint, true);
-        xhr.setRequestHeader('Content-Type', 'application/json');
-        xhr.send(respBody);
+        var response = fetch(post_endpoint, {
+            method: "POST",
+            headers : {"Content-Type": "application/json"},
+            body: respBody
+        }).then(function (response) {
+            alert(response.status +": " + response.statusText)
+        })
 
-        console.log("Response code given is " + xhr.status)
+        console.log(response)
     }
 
 </script>
@@ -73,5 +84,6 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 -->
+
 </body>
 </html>
